--- a/exampleSite/config/_default/languages.yaml
+++ b/exampleSite/config/_default/languages.yaml
@@ -1,22 +1,21 @@
 # Languages
-#   Create a section for each of your site's languages.
-#   Documentation: https://wowchemy.com/docs/guide/language/
+#   Create a `[X]` block for each language you want, where X is the language ID.
+#   Refer to https://sourcethemes.com/academic/docs/language/
 
-# Default language
+# Configure the Spanish version of the site.
 [en]
-  languageCode: "en-us"
-  contentDir: "content/en"
-  title: "Carlos' Portfolio"
+  languageCode = "en-us"
+   contentDir = "content/en"
+   title = "Carlos' Portfolio"
 
-# Uncomment the lines below to configure your website in a second language.
+# Configure the English version of the site.
 [es]
-  languageCode: "es-pa"
-  contentDir: "content/es"
-  title: "Portfolio de Carlos"
-  es.params:
-    description: "Site description in English..."
-  es.menu:
-    main:
-      - name: "Sobre mí"
-        url: '#about'
-        weight: 1
+  languageCode = "es-pa"
+  contentDir = "content/es"
+  title = "Portfolio de Carlos"
+  [es.params]
+    description = "Site description in Englsih..."
+  [[es.menu.main]]
+    name = "About"
+    url = "#about"
+    weight = 1
