--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,8 +7,8 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
+  - name: Accomplishments
+    url: '#accomplishments'
     weight: 20
   - name: Projects
     url: '#projects'
@@ -17,7 +17,7 @@ main:
     url: '#talks'
     weight: 40
   - name: Publications
-    url: '#featured'
+    url: '#pages'
     weight: 50
   - name: Contact
     url: '#contact'
