--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,9 +3,9 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Academic # Website name
-baseurl: 'https://example.com/' # Website URL
-copyright: '' # Footer text, e.g. '© {year} Me'
+title: Carlos Torres, Data Scientist # Website name
+baseurl: 'https://carlosatc.netlify.app/' # Website URL
+copyright: '© {year} Carlos Torres' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
