--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -24,10 +24,10 @@ email: carlos221296@gmail.com
 phone: ''
 address:
   street:
-  city: Panama City, Panama
+  city: Wedel
   region:
-  postcode:
-  country:
+  postcode: 22880
+  country: Germany
   country_code:
 coordinates:
   latitude: '8.980971063855193'
