--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -19,19 +19,22 @@ es:
     main:
       - name: Sobre mí
         url: '#about'
-        weight: 1
-      - name: Logros
-        url: '#accomplishments'
-        weight: 2
+        weight: 10
+      - name: Experiencia
+        url: '#experience'
+        weight: 20
       - name: Proyectos
         url: '#projects'
-        weight: 3
+        weight: 30
+      - name: Certificaciones
+        url: '#certifications'
+        weight: 40
       - name: Charlas
         url: '#talks'
-        weight: 4
+        weight: 50
       - name: Publicaciones
         url: '#publications'
-        weight: 5
+        weight: 60
       - name: Contacto
         url: '#contact'
-        weight: 6
+        weight: 70
