Update Hugo version

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,8 @@
   publish = "public"
 
 [build.environment]
-  HUGO_VERSION = "0.89.4"
+  HUGO_VERSION = "0.129.0"
+  HUGO_EXTENDED = "true"
   HUGO_ENABLEGITINFO = "true"
 
 [context.production.environment]
